k8s/stories/stories-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stories
spec:
  replicas: 2
  selector:
    matchLabels:
      app: stories
  template:
    metadata:
      labels:
        app: stories
    spec:
      containers:
        - name: app
          image: ghcr.io/netwerk-digitaal-erfgoed/stories
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: ghcr
