k8s/stories/service.yml
apiVersion: v1
kind: Service
metadata:
  name: stories
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: stories
