k8s/stories/stories-ingress.yml
# See https://docs.nginx.com/nginx-ingress-controller/configuration/ingress-resources/basic-configuration/
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: stories
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: demo.netwerkdigitaalerfgoed.nl
      http:
        paths:
          - path: /stories
            backend:
              serviceName: stories
              servicePort: 80
